# CMake-notes

./: CMakeLists.txt  README.md
include/: head.h
src/: main.cpp  sub.cpp
src1/: add.cpp
